--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@angular/animations": "^19.0.0",
     "@angular/common": "^19.2.11",
     "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
+    "@angular/core": "^19.2.11",
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@capacitor-community/media": "^8.0.1",
     "@capacitor/android": "^7.2.0",
-    "@capacitor/app": "7.0.1",
+    "@capacitor/app": "^7.0.1",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "^7.2.0",
     "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "7.0.1",
@@ -30,7 +32,7 @@
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/splash-screen": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.5.7",
     "@ionic/storage": "^4.0.0",
     "ionicons": "^7.0.0",
     "jsmediatags": "^3.9.7",
