--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/splash-screen": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@capawesome/capacitor-file-picker": "^7.1.0",
     "@ionic/angular": "^8.5.7",
     "@ionic/storage": "^4.0.0",
+    "capacitor-file-picker": "^1.0.10",
     "ionicons": "^7.0.0",
     "jsmediatags": "^3.9.7",
     "rxjs": "~7.8.0",
